# safebox

./: .dockerignore  .gitignore  BUILD.md  Dockerfile  INSTALL.md  LICENSE  README.md  README.public.md  alembic.ini  currency.dump  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: python-package.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260220_0001_baseline.py  20260310_0002_nfc_requester_nonce.py
app/: appmodels.py  branding.py  config.py  db.py  geo.py  main.py  nwc.py  rates.py  relay.py  tasks.py  testdb.py  utils.py
app/data/: default.conf
app/js/: extensions.js  fixi-0.9.2.js  htmx.org  tx-utils.js  ui-prescription-utils.js  ui-utils.js
app/routers/: agent.py  credentials.py  emergency.py  lnaddress.py  pos.py  prescriptions.py  public.py  records.py  safebox.py  scanner.py
app/src/: tx-utils.js  ui-prescription-utils.js  ui-utils.js
app/static/: mobile.css  pos.css  records-modern.css
app/templates/: access.html  acquirescan.html  card.html  consult.html  credentials.html  dangerzone.html  ecash.html  eqr.html  eyeprescription.html  healthconsult.html  healthdata.html  inbox.html  invite.html  issuecard.html  mybalance.html  paypass.html  pos.html  privatedata.html  profile.html  rates.html  recover.html  result.html  txhistory.html  uxbase.html  uxwallet.html  welcome.html  welcome_old.html
branding/: default.yml  dev.safebox.dev.yml
data/data/: default.conf
docker/: entrypoint.sh
docs/: ACCEPTANCE-MODEL.md  INITIAL-PROPOSAL.md  MARKETING-ANALYSIS-2026-03-05.md  MILESTONES.md  NAUTH-PROTOCOL.md  NOSFABRICA-PROPOSAL.md  NOSTR-SAFEBOX-NOV-2024.md  NOSTRFORINSTITUTIONS.md  NortherLinkCaseStudy.md  PHASE3-PROPOSAL.md  POLICY-BRIEF.md  PROGRESS-REPORT-01.md  RECORD-FLOWS.md  SPECIFICATION.md  WORKNOTES.md
docs/apostille/: articles.md  private-apostille.md  rationale.md
docs/devops/: blossom-xfer-rollout-checklist.md  config-parameters-and-key-material-inventory.md  cors-browser-agent-postmortem-2026-02-25.md  incremental-change-hardening-strategy.md  kubernetes-secret-bootstrap-and-promotion.md  openbao-integration-procedure.md  post-deploy-sanity-check.md  recipient-offer-incremental-execution-checklist.md  safebox-vps-devops-server-setup.md  secret-management-without-persistent-default-conf.md  zero-config-docker-bootstrap-and-production-path.md
docs/excalidraw/: architeccture.excalidraw  safebox-block-diagram.excalidraw  tim.excalidraw
docs/img/: nAuth.excalidraw
docs/specs/: ACCEPTANCE-MODEL.md  (+58 more)
expmtl/: Dockerfile
safebox/: acorn.py  b_dhke.py  cli.py  cli_acorn.py  cli_agent.py  constants.py  func_utils.py  lightning.py  main.py  models.py  monstrmore.py  nostr.py  prompts.py  safedaemon.py  scratch.json  test.scratch  wallet.py  wallet_DEPRECATED.py
scripts/: basicresolver.py  discover.py  nameserver.py  test-deriv.py  zoneserver.py
setup/: currency.csv
templates/: access.html  safebox.html  uxbase.html  uxwallet.html  welcome.html
(+49 files in other folders)
