[tool.poetry]
name = "safebox"
version = "0.1.2"
description = "Nostr SafeBox"
authors = ["trbouma <trbouma@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
monstr = "^0.1.9"
asyncio = "^3.4.3"
logging = "^0.4.9.6"
click = "^8.1.7"
wheel = "^0.43.0"
pyyaml = "^6.0.1"
pydantic = "^2.8.2"
hotel-names = "^0.0.1"
coolname = "^2.2.0"
requests = "^2.32.3"

[tool.poetry.scripts]
npcache = "safebox.cli:cli"
safebox = "safebox.cli:cli"
npurse = "safebox.cli:cli"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
